# led-matrix-rs-template

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs
